--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: black;
     font-family: 'Dancing Script', cursive;
-    color: white;
+    color: gainsboro;
     margin: 15px;
     text-align: center;
 }
